--- a/APM/app/products/product-list.component.html
+++ b/APM/app/products/product-list.component.html
@@ -39,7 +39,9 @@
                 <td>{{product.productName}}</td>
                 <td>{{product.productCode|lowercase}}</td>
                 <td>{{product.price|currency:'USD':true:'1.2-2'}}</td>
-                <td>{{product.starRating}}</td>
+                <td>
+                  <ai-star></ai-star>
+                </td>
               </tr>
           </tbody>
 
