--- a/APM/app/home/welcome.component.html
+++ b/APM/app/home/welcome.component.html
@@ -10,9 +10,9 @@
         </div>
         <div class="row"  >
             <div class="text-center">Developed by:</div>
-            <h3 class="text-center">Deborah Kurata</h3>
+            <h3 class="text-center">Bestin John</h3>
 
-            <div class="text-center">@deborahkurata</div>
+            <div class="text-center">@bestinjohn</div>
             <div class="text-center">
                 <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
             </div>
