--- a/APM/app/products/product-detail.component.html
+++ b/APM/app/products/product-detail.component.html
@@ -2,4 +2,11 @@
     <div class="panel-heading">
         {{pageTitle}}
     </div>
+
+    <div class="panel-footer" (click)="onBack()" >
+        <a class="btn btn-primary" style="width:80px;">
+            <i class="glyphicon glyphicon-chevron-left"></i>Back
+        </a>
+
+    </div>
 </div>
