--- a/APM/app/products/product-list.component.html
+++ b/APM/app/products/product-list.component.html
@@ -36,7 +36,7 @@
                 <td>
                   <img [src]="product.imageUrl" [title]="product.productName" [style.width.px]="imageWidth" [style.margin.px]="imageMargin" *ngIf="showImage">
                 </td>
-                <td>{{product.productName}}</td>
+                <td><a [routerLink]="['/product',product.productId]">{{product.productName}}</a></td>
                 <td>{{product.productCode|lowercase}}</td>
                 <td>{{product.price|currency:'USD':true:'1.2-2'}}</td>
                 <td>
